# a-organvm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BLUEPRINT.md  CLAUDE.md  FOSSIL-RECORD.md  INSTANCE.toml  LANDSCAPE.md  NATURAL-LAW-DECISION--composition--well-founded.md  NATURAL-LAW-DECISION--nervous--orchestrate.md  NATURAL-LAW-DECISION--parameter-path.md  NATURAL-LAW-DECISION--skeletal--define.md  NATURAL-LAW-DECISION--vertical-portal.md  PERIODIC-TABLE.md  README.md  RELAY.md  SEED.md  TRIPTYCH.md  circulatory--contribute.yaml  circulatory--relay.yaml  circulatory--route.yaml  circulatory_route.py  cocoon-map.yaml  cultvra--logos.md  cultvra--logos.yaml  cultvra_logos.py  digestive--filter-migration.yaml  digestive--index.yaml  digestive--measure.yaml  digestive--parse.yaml  endocrine--regulate.yaml  excretory--filter.yaml  excretory--metabolize.yaml  fossil-record.json  immune--score.yaml  immune--verify.yaml  immune--watch.yaml  immune_verify.py  integumentary--emit.yaml  integumentary--present.yaml  (+36 more)
.claude/plans/: 2026-03-31-eve-adam-lineage-verification.md  2026-03-31-first-embodiment-gen002-skl001-sig001.md  2026-03-31-state-of-affairs-union-mind-state.md  2026-04-02-cultvra-logos-third-function.md  2026-04-03-mechanism-documentation-counterparts.md  2026-04-05-fortify-from-taxis-interaction.md  2026-04-05-universal-modular-fractal-alchemical-synthesizer.md  2026-04-06-gap-analysis-sovereign-ground.md  2026-04-06-gemini-claude-cross-examination.md  2026-04-06-orientation-map.md  2026-04-07-ideal-form-classification.md  2026-04-21-respiratory-ingest-fifth-function.md  (+1 more)
(+1 files in other folders)
